--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "zzh",
-    "version": "0.0.1",
-    "description": "a simple application",
+    "name": "hypixel_overlay",
+    "version": "1.0.0",
+    "description": "Hypixel overlay which can search score.",
     "main": "main.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
